Fix: #12549 Menubar: Overflow problem refactor

--- a/src/app/components/menubar/menubar.css
+++ b/src/app/components/menubar/menubar.css
@@ -1,7 +1,6 @@
 .p-menubar {
     display: flex;
     align-items: center;
-    overflow: auto;
 }
 
 .p-menubar ul {
@@ -30,6 +29,7 @@
 .p-menubar-root-list {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .p-menubar-root-list > li ul {
